# jester

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  LICENSE  README.md  TODO_spectral.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  docs.yml  nightly.yml  publish.yml
docs/: conf.py  index.rst  inference.md  inference_architecture.md  inference_documentation_guide.md  inference_index.md  inference_quickstart.md  inference_workflow.md  inference_yaml_reference.md
docs/_static/: style.css
docs/api/: eos.rst  inference.rst  jesterTOV.rst  ptov.rst  tov.rst  utils.rst
examples/: automatic_differentiation.ipynb  automatic_differentiation_metamodel.ipynb  eos_STtov.ipynb  eos_tov.ipynb
examples/eos_tov/: automatic_differentiation_metamodel.ipynb  eos_STtov.ipynb  eos_tov.ipynb
examples/inference/: .gitignore  README.md  all_postprocessing.sh  dev.sh
examples/inference/GW170817/: README.md  config.yaml  prior.prior  submit.sh
examples/inference/NICER/: README.md  config.yaml
examples/inference/NICER_J0030/: config.yaml
examples/inference/NICER_J0740/: config.yaml  prior.prior
examples/inference/blackjax-ns-aw/: submit_all.sh
examples/inference/blackjax-ns-aw/GW170817/: config.yaml  prior.prior  submit.sh
examples/inference/blackjax-ns-aw/NICER_J0030/: config.yaml  submit.sh
examples/inference/blackjax-ns-aw/NICER_J0740/: config.yaml  submit.sh
examples/inference/blackjax-ns-aw/chiEFT/: config.yaml  submit.sh
examples/inference/blackjax-ns-aw/prior/: config.yaml  submit.sh
examples/inference/blackjax-ns-aw/radio/: config.yaml  submit.sh
examples/inference/chiEFT/: config.yaml  prior.prior  submit.sh
examples/inference/flowmc/: submit_all.sh
examples/inference/flowmc/GW170817/: config.yaml  submit.sh
examples/inference/flowmc/NICER_J0030/: config.yaml  submit.sh
examples/inference/flowmc/NICER_J0740/: config.yaml  submit.sh
examples/inference/flowmc/chiEFT/: config.yaml
examples/inference/flowmc/prior/: config.yaml  prior.prior
examples/inference/flowmc/radio/: config.yaml
examples/inference/outdir/: backup_inference.py
examples/inference/prior/: config.yaml  submit.sh
examples/inference/prior/outdir_prior/: runtime.txt
examples/inference/radio/: config.yaml  submit.sh
examples/inference/smc/: config.yaml
examples/inference/smc-nuts/: config.yaml
examples/inference/smc-random-walk/: config.yaml
examples/inference/smc_nuts/: README.md  submit_all.sh
examples/inference/smc_nuts/GW170817/: config.yaml  submit.sh
examples/inference/smc_nuts/NICER_J0030/: config.yaml  submit.sh
examples/inference/smc_nuts/NICER_J0740/: config.yaml  submit.sh
examples/inference/smc_nuts/chiEFT/: config.yaml  submit.sh
examples/inference/smc_nuts/prior/: config.yaml  submit.sh
examples/inference/smc_nuts/radio/: config.yaml  submit.sh
examples/inference/smc_random_walk/: README.md  clean_all.sh  submit_all.sh
examples/inference/smc_random_walk/GW170817/: config.yaml  prior.prior  submit.sh
examples/inference/smc_random_walk/NICER_J0030/: config.yaml  (+1 more)
examples/inference/spectral/: clean_all.sh  submit_all.sh
examples/kde_nf_validation/: README.md  validate_kde_nf.py
jesterTOV/: STtov.py  eos.py  logging_config.py  ptov.py  sampling.py  tov.py  utils.py
jesterTOV/crust/: BPS.npz  DH.npz  README.md  SLy.npz  convert_crust.py
jesterTOV/eos/: __init__.py  base.py  crust.py  families.py
jesterTOV/eos/metamodel/: __init__.py  base.py  metamodel.py  metamodel_CSE.py  metamodel_peakCSE.py
jesterTOV/eos/spectral/: __init__.py  spectral_decomposition.py
jesterTOV/inference/: CLAUDE.md  base.py  postprocessing.py  result.py  run_inference.py  train_NF.py  transforms.py
jesterTOV/inference/base/: __init__.py  likelihood.py  prior.py  transform.py
jesterTOV/inference/config/: __init__.py  generate_yaml_reference.py  parser.py  schema.py
jesterTOV/inference/constraints/: likelihood.py
jesterTOV/inference/data/: .gitignore  CLAUDE.md  README.md  __init__.py  download_all_nicer_datasets.sh  download_gw170817.py  download_gw190425.py  download_nicer_datasets.py  download_xpnrtv3.py  explore_and_extract_nicer.py  explore_nicer_datasets.py  old_utils.py  zenodo_downloader.py
jesterTOV/inference/flows/: README.md  __init__.py  config.py  flow.py  reorganize_configs.py  submit.sh  submit_all_flows.sh  test.sh  train_all_flows.sh  train_all_flows_block_neural.sh  train_all_flows_gw190425.sh  train_flow.py
jesterTOV/inference/likelihoods/: __init__.py  chieft.py  combined.py  constraints.py  factory.py  gw.py  nicer.py  radio.py  rex.py
jesterTOV/inference/postprocessing/: postprocessing.py
jesterTOV/inference/priors/: __init__.py  parser.py
jesterTOV/inference/samplers/: __init__.py  blackjax_ns_aw.py  blackjax_smc.py  factory.py  flowmc.py  jester_sampler.py  transform_factory.py
jesterTOV/inference/transforms/: __init__.py  base.py  factory.py  metamodel.py  metamodel_cse.py  spectral.py  transform.py
jesterTOV/tabulated_eos/: ENG.npz  H4.npz  HQC18.npz  MPA1.npz  MS1.npz  SLY.npz  SLY230A.npz  SLY4.npz  WFF1.npz  generate_lalsuite_eos.py
jesterTOV/tov/: __init__.py  anisotropy.py  base.py  data_classes.py  gr.py  post.py  scalar_tensor.py
jose/: __init__.py  eos.py  tov.py  utils.py
joseTOV/: __init__.py  eos.py  metamodel_eos.py  neuralnet.py  sampling.py  tov.py  utils.py
joseTOV/crust/: DH.npz  convert_crust.py
outdir/: README.md
tests/: __init__.py  conftest.py  test_cs2_roundtrip.py  test_eos.py  test_integration.py  test_ptov.py  test_tov.py  test_utils.py  tov.py
tests/data/: micro_eos.npz
tests/test_inference/: __init__.py  conftest.py  test_base.py  test_config.py  test_flow_models.py  test_flows.py  test_integration.py  test_likelihoods.py  test_postprocessing.py  test_priors.py  test_result.py  test_samplers.py  test_transform_validation.py  test_transforms.py
tests/test_inference/test_e2e/: __init__.py  conftest.py  test_e2e_blackjax_ns_aw.py  test_e2e_flowmc.py  test_e2e_prior_only.py  test_e2e_smc_rw.py
(+213 files in other folders)
